[package]
name = "frost2_rust"
version = "0.1.0"
edition = "2021"
description = "FROST1, FROST2 variants & ROAST comparison (Ristretto255, SHA-512, DKG)"

[dependencies]
curve25519-dalek = { version = "4.1", default-features = false, features = ["alloc", "rand_core"] }
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
